--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Rhum Navi</h1>
+                    <h1 class="mx-auto my-0">Rhum Navi</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">Le Rhum de la marine marchande</h2>
                     <a class="btn btn-outline-secondary js-scroll-trigger" href="#Inspiration">Faites la traversée</a>
                     <br>
@@ -57,7 +57,7 @@
                 <br/>
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-white mb-4 pt-4">Commencez la dégustation</h2>
+                        <h2 class="mb-4 pt-4">Commencez la dégustation</h2>
                         <p class="text-white-50">
                             Avant toute chose et après avoir ouvert votre bouteille, goûtez Navi sec, à température ambiante. Appréciez, de la façon la plus simple qu’il soit, ce rhum. Ce que vous dégustez vient de cet univers de rêve nommé désormais les Caraïbes, sur des terres où l’histoire, les cultures, les coutumes sont différentes des notres. Et pourtant, avec Navi, vous ne vous êtes jamais senti aussi proche de ces artisans d’or liquide. Vous pouvez désormais poursuivre la dégustation en accompagnant Navi d’un joli glaçon, qui va venir lui apporter fraîcheur et dilution. Pour les plus curieux, Navi vous tend la main pour que vous assembliez en cocktail.
                         </p>
@@ -82,6 +82,11 @@
                     </div>
                 </div>
 
+
+                <div class="Cocktails header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+                    <h2 class="mb-4">Rencontrez les créateurs</h2>
+                  </div>
+                  <br/>
                 <!-- Alexandre -->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><img class="img-fluid" src="alexandre.jpg" alt="Alexandre" /></div>
@@ -89,7 +94,7 @@
                         <div class="text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Alexandre</h4>
+                                    <h4>Alexandre</h4>
                                     <p class="mb-0 text-white-50">Alexandre est, depuis 2014, caviste spécialiste du rhum. Il a vu le rhum se frayer un chemin vers les bars, placards et autres cachettes secrètes des consommateurs. Il a vu les goûts évoluer, les nouveautés apparaître puis disparaître. De par son métier, il sait ce qui se cache derrière les belles étiquettes des marques qu’il propose à la vente et sait démêler le vrai du faux. Lui et son équipe sont toujours de bon conseil lorsqu’il s’agit de (se) faire plaisir. La création de légendes, il connaît bien puisqu’il a embouteillé au nom de sa cave 10 rhums différents de distilleries uniques et légendaires.
                                         Aujourd’hui son souhait est de rendre encore plus accessible, autant en termes de tarification que de saveurs, ce spiritueux noble et récréatif.</p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
@@ -105,7 +110,7 @@
                         <div class="text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Baptiste</h4>
+                                    <h4>Baptiste</h4>
                                     <p class="mb-0 text-white-50">Baptiste est passionné d’artisanat depuis aussi longtemps qu’il puisse avoir des souvenirs. Cette passion s’est matérialisée sous la forme d’un amour pour les spiritueux et les personnes qui les fabriquent en 2006. Il a ensuite trouvé par hasard le plaisir ludique du cocktail et s’est professionnalisé d’abord en écrivant puis en dispensant des cours de cocktails dès 2013. Il a crée sa structure en 2017 qui est dédiée à la découverte des saveurs et à la cohésion d’équipe avec de nouvelles méthodes pour comprendre et apprendre les spiritueux et les cocktails. Son quotidien est consacré au partage et à la pédagogie.
                                         Il a également un titre de Cognac Educator certifié par le Bureau National Interprofessionnel du Cognac. Il contribue depuis plus de 3 ans à Rumporter, le magazine de la culture Rhum. Il est aussi depuis 2018 l’Expert Cocktail pour la célèbre Revue du Vin de France.</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
@@ -124,7 +129,7 @@
             <br/>
             <br/>
         <div class="Cocktails header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-            <h2 class="text-white mb-4">Créez des Cocktails</h1>
+            <h2 class="mb-4">Créez des Cocktails</h2>
           </div>
         <div class="container pt-4">
         <div class="row">
